# FaceFind

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/libfacefind/: CMakeLists.txt  FaceFinder.cpp  FaceFinder.h
src/libproto/: AnswerInfo.cpp  AnswerInfo.h  CMakeLists.txt  FaceInfo.cpp  FaceInfo.h  face.proto
